--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -63,7 +63,7 @@
 <p></p>
 <script src="/static/jsc3d.js" type="text/javascript"></script>
 <!-- 模型連結 -->
-<div id="modelLinks1" style="display: none;"><a href="https://s104.cycu.org/~41223149/41223149_w7_Baseplate.stl">模型1</a> <!-- 第一題的模型 --> <a href="https://s104.cycu.org/~41223149/41223149_w7_BearingblockA.stl">模型2</a> <!-- 第二題的模型 --> <a href="https://s104.cycu.org/~41223149/41223149_w7_BearingblockB.stl">模型3</a> <!-- 第三題的模型 --> <a href="https://s104.cycu.org/~41223149/41223149_w7_Columnbase2.stl">模型4</a> <!-- 第四題的模型 --></div>
+<div id="modelLinks1" style="display: none;"><a href="https://s104.cycu.org/~41223149/41223149_w7_Baseplate.stl">模型1</a> <!-- 第一題的模型 --> <a href="https://s104.cycu.org/~41223149/41223149_w7_BearingblockA.stl">模型2</a> <!-- 第二題的模型 --> <a href="https://s104.cycu.org/~41223149/41223149_w7_BearingblockB.stl">模型3</a> <!-- 第三題的模型 --> <a href="https://s104.cycu.org/~41223149/41223149_w7_Columnbase2.stl">模型4</a> <!-- 第四題的模型 --><a href="https://s104.cycu.org/~41223149/41223149_w7_Headattachment.stl">模型5</a> <!-- 第五題的模型 --> <a href="https://s104.cycu.org/~41223149/41223149_w7_Guideplate.stl">模型6</a> <!-- 第六題的模型 --> <a href="https://s104.cycu.org/~41223149/41223149_w7_Gland.stl">模型7</a> <!-- 第七題的模型 --> <a href="https://s104.cycu.org/~41223149/41223149_w7_Glandblank.stl">模型8</a> <!-- 第8題的模型 --> <a href="https://s104.cycu.org/~41223149/41223149_w7_Dovetailstop.stl">模型9</a> <!-- 第九題的模型 --> <a href="https://s104.cycu.org/~41223149/41223149_w7_Dovetailbracket.stl">模型10</a> <!-- 第十題的模型 --> <a href="https://s104.cycu.org/~41223149/41223149_w7_Rodsupport.stl">模型11</a> <!-- 第十一題的模型 --> <a href="https://s104.cycu.org/~41223149/41223149_w7_Headyoke.stl">模型12</a> <!-- 第十二題的模型 --></div>
 <!-- 動態生成的模型部分 -->
 <div id="modelParts1" style="display: flex; flex-wrap: wrap; justify-content: flex-start; gap: 20px;"></div>
 <script type="text/javascript">
@@ -149,8 +149,7 @@ function initModelParts() {
 }
 
 window.onload = initModelParts;  // 頁面加載時初始化所有模型
-</script>
-<h2>w9</h2>
+</script><h2>w9</h2>
 <p>1.自評期中成績</p>
 <p>2.分析NX的在職場上的發展與用處</p>
 <p>ChatGPT:</p>
@@ -163,7 +162,7 @@ window.onload = initModelParts;  // 頁面加載時初始化所有模型
 <p><span>倆者繪圖簡述比較:</span></p>
 <p><span>    1.Solvespaces:可畫較簡易的3D圖形設計分析。<br/></span></p>
 <p>   <span> 2.</span>NX:可以畫出曲面和模擬加工的各種運用，並且廣泛運用在業界當中，與solidworks和inventer比較多了一些功能。</p>
-<br/><br/><span>w</span><span>10</span>
+<h2>w10</h2>
 <p><span><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen="allowfullscreen" data-mce-fragment="1" frameborder="0" height="315" referrerpolicy="strict-origin-when-cross-origin" src="//www.youtube.com/embed/w4YIWJ3AB0U?si=zPcFG3NOewwErCcA" title="YouTube video player" width="560"></iframe></span></p>
 <h2>w11_hw</h2>
 <p>其他組員作業連結<a href="https://mdecad2024.github.io/hw-Spirit0224/content/w11_hw.html">41223122</a>  <a href="https://mdecad2024.github.io/hw-joeisme1208/content/w11_hw.html">41223130</a></p>
@@ -177,7 +176,7 @@ window.onload = initModelParts;  // 頁面加載時初始化所有模型
 <p></p>
 <script src="/static/jsc3d.js" type="text/javascript"></script>
 <!-- 模型連結 -->
-<div id="modelLinks1" style="display: none;"><a href="https://s104.cycu.org/~41223149/41223149_1_03.stl">模型1</a> <!-- 第一題的模型 --> <a href="https://s104.cycu.org/~41223149/41223149_1_04.stl">模型2</a> <!-- 第二題的模型 --> <a href="https://s104.cycu.org/~41223149/41223149_1_05.stl">模型3</a> <!-- 第三題的模型 --><a href="https://s104.cycu.org/~41223149/41223149_w7_Headattachment.stl">模型4</a> <!-- 第四題的模型 --> <a href="https://s104.cycu.org/~41223149/41223149_w7_Guideplate.stl">模型5</a> <!-- 第五題的模型 --> <a href="https://s104.cycu.org/~41223149/41223149_w7_Gland.stl">模型6</a> <!-- 第六題的模型 --> <a href="https://s104.cycu.org/~41223149/41223149_w7_Glandblank.stl">模型7</a> <!-- 第七題的模型 --> <a href="https://s104.cycu.org/~41223149/41223149_w7_Dovetailstop.stl">模型8</a> <!-- 第八題的模型 --> <a href="https://s104.cycu.org/~41223149/41223149_w7_Dovetailbracket.stl">模型9</a> <!-- 第九題的模型 --></div>
+<div id="modelLinks1" style="display: none;"><a href="https://s104.cycu.org/~41223149/41223149_1_03.stl">模型1</a> <!-- 第一題的模型 --> <a href="https://s104.cycu.org/~41223149/41223149_1_04.stl">模型2</a> <!-- 第二題的模型 --> <a href="https://s104.cycu.org/~41223149/41223149_1_05.stl">模型3</a> <!-- 第三題的模型 --></div>
 <!-- 動態生成的模型部分 -->
 <div id="modelParts1" style="display: flex; flex-wrap: wrap; justify-content: flex-start; gap: 20px;"></div>
 <script type="text/javascript">
@@ -263,8 +262,7 @@ function initModelParts() {
 }
 
 window.onload = initModelParts;  // 頁面加載時初始化所有模型
-</script>
-<h2>w12_ch</h2>
+</script><h2>w12_ch</h2>
 <p></p>
 <p>自行利用 Github commits 提交記錄評分.</p>
 <h1>HW1_Exam</h1>
