--- a/content/w16.html
+++ b/content/w16.html
@@ -141,9 +141,9 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">w9 << <a href='w9.html'>Previous</a> <a href='w11_hw.html'>Next</a> >> w11_hw<br /><h1>w10</h1>
-<p><span><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen="allowfullscreen" data-mce-fragment="1" frameborder="0" height="315" referrerpolicy="strict-origin-when-cross-origin" src="//www.youtube.com/embed/w4YIWJ3AB0U?si=zPcFG3NOewwErCcA" title="YouTube video player" width="560"></iframe></span></p>
-<br />w9 << <a href='w9.html'>Previous</a> <a href='w11_hw.html'>Next</a> >> w11_hw</div>
+    <div id="tipue_search_content">w12_ch << <a href='w12_ch.html'>Previous</a> <a href='HW2_Exam-1.html'>Next</a> >> HW2_Exam-1<br /><h1>w16</h1>
+<p><a href="./../downloads/Cad2024.pdf">/downloads/Cad2024.pdf</a></p>
+<br />w12_ch << <a href='w12_ch.html'>Previous</a> <a href='HW2_Exam-1.html'>Next</a> >> HW2_Exam-1</div>
         
     <!-- footer -->
       <div class="container">
