--- a/config/content.htm
+++ b/config/content.htm
@@ -293,27 +293,108 @@ window.onload = initModelParts;  // 頁面加載時初始化所有模型
 <p style="padding-left: 30px;">完成上述流程後, 請將 HW1 自評分數輸入 cad2024 自評表單中.</p>
 <p></p>
 <h1>HW2</h1>
-<h2><span>HW2_Exam</span></h2>
-<h3><span>w16_exam1</span></h3>
+<h2>HW2_Exam</h2>
+<h3>w16_exam1</h3>
 <p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen="allowfullscreen" frameborder="0" height="315" referrerpolicy="strict-origin-when-cross-origin" src="https://www.youtube.com/embed/SAgrorVu6LQ?si=RuiVW7htKkNjzkc1" title="YouTube video player" width="560"></iframe></p>
 <p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen="allowfullscreen" frameborder="0" height="315" referrerpolicy="strict-origin-when-cross-origin" src="https://www.youtube.com/embed/XEHdy48pCYY?si=xd1lZVo8_HfuimKS" title="YouTube video player" width="560"></iframe><span> </span><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen="allowfullscreen" frameborder="0" height="315" referrerpolicy="strict-origin-when-cross-origin" src="https://www.youtube.com/embed/wZLZmGmIAtw?si=9jRAtOoDtwb2lbwj" title="YouTube video player" width="560"></iframe><span> </span><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen="allowfullscreen" frameborder="0" height="315" referrerpolicy="strict-origin-when-cross-origin" src="https://www.youtube.com/embed/GsyFO9GlJpo?si=LvdlgivHpa1C6O4O" title="YouTube video player" width="560"></iframe></p>
 <h4><span>w16_exam1.stl</span></h4>
+<script src="/static/jsc3d.js" type="text/javascript"></script>
+<!-- 模型連結 -->
+<div id="modelLinks1" style="display: none;"><a href="https://s104.cycu.org/~41223149/412231491.stl">模型1</a> <!-- 第一題的模型 --> <a href="https://s104.cycu.org/~41223149/412231492.stl">模型2</a> <!-- 第二題的模型 --> <a href="https://s104.cycu.org/~41223149/412231493.stl">模型3</a> <!-- 第三題的模型 --> <a href="https://s104.cycu.org/~41223149/41223149mix.stl">模型4</a> <!-- 第四題的模型 --></div>
+<!-- 動態生成的模型部分 -->
+<div id="modelParts1" style="display: flex; flex-wrap: wrap; justify-content: flex-start; gap: 20px;"></div>
+<script type="text/javascript">
+// 函數用來動態生成模型部件
+function createModelPart(index, url) {
+    var modelPartDiv = document.createElement('div');
+    modelPartDiv.style = "width: 48%;"; // 左右排列
+
+    modelPartDiv.innerHTML = `
+        <div id="models${index}">
+            <canvas height="300" id="cv${index}" style="border: 1px solid;" width="400"></canvas>
+        </div>
+
+        <div style="width: 400px; height: 70px; border: 1px solid; margin-bottom: 20px;">
+            Model Color:<input id="mdlClr${index}" onchange="changeOption${index}('ModelColor',this.value)" style="margin-right: 50px;" type="color" value="#00ff40">
+            Back Color1:<input id="bckClr${index}_1" onchange="changeOption${index}('BackgroundColor1',this.value)" style="margin-right: 50px;" type="color" value="#000000">
+            Back Color2:<input id="bckClr${index}_2" onchange="changeOption${index}('BackgroundColor2',this.value)" type="color" value="#000000"><br>
+            Render Mode:<select id="render${index}" onchange="changeOption${index}('RenderMode',this.value)">
+                <option>Flat</option>
+                <option>Point</option>
+                <option>Wireframe</option>
+                <option>Smooth</option>
+            </select>
+            Definition:<select id="defini${index}" onchange="changeOption${index}('Definition',this.value)">
+                <option>Standard</option>
+                <option>low</option>
+                <option>high</option>
+            </select>
+        </div>
+    `;
+    document.getElementById('modelParts1').appendChild(modelPartDiv);
+
+    // 初始化觀察者和選項
+    window[`viewer${index}`] = null;
+
+    // 獲取選項的函數
+    window[`getOptions${index}`] = function() {
+        var mc = document.getElementById(`mdlClr${index}`).value;
+        var bc1 = document.getElementById(`bckClr${index}_1`).value;
+        var bc2 = document.getElementById(`bckClr${index}_2`).value;
+        var ren = document.getElementById(`render${index}`).value;
+        var def = document.getElementById(`defini${index}`).value;
+        return {ModelColor: mc, BackgroundColor1: bc1, BackgroundColor2: bc2, RenderMode: ren, Definition: def};
+    };
+
+    window[`readSTLfile${index}`] = function(opt, canvasId) {
+        var canvas = document.getElementById(canvasId);
+        window[`viewer${index}`] = new JSC3D.Viewer(canvas);
+        window[`viewer${index}`].setParameter('SceneUrl', opt.SceneUrl);
+        window[`viewer${index}`].setParameter('InitRotationX', 0);
+        window[`viewer${index}`].setParameter('InitRotationY', 0);
+        window[`viewer${index}`].setParameter('InitRotationZ', 0);
+        window[`viewer${index}`].setParameter('ModelColor', opt.ModelColor);
+        window[`viewer${index}`].setParameter('BackgroundColor1', opt.BackgroundColor1);
+        window[`viewer${index}`].setParameter('BackgroundColor2', opt.BackgroundColor2);
+        window[`viewer${index}`].setParameter('RenderMode', opt.RenderMode);
+        window[`viewer${index}`].setParameter('Definition', opt.Definition);
+        window[`viewer${index}`].init();
+        window[`viewer${index}`].update();
+    };
+
+    window[`changeOption${index}`] = function(strOpt, strValue) {
+        console.log(`PART ${index} change ` + strOpt + " to " + strValue);
+        window[`viewer${index}`].setParameter(strOpt, strValue);
+        window[`viewer${index}`].init();
+        window[`viewer${index}`].update();
+    };
+
+    window[`openByGet${index}`] = function() {
+        var opt = window[`getOptions${index}`]();
+        opt.SceneUrl = url;
+        window[`readSTLfile${index}`](opt, `cv${index}`);
+    };
+
+    window[`openByGet${index}`]();  // 加載模型
+}
+
+function initModelParts() {
+    var links = document.querySelectorAll('#modelLinks1 a');
+    links.forEach(function(link, index) {
+        createModelPart(index + 1, link.href); // 初始化模型
+    });
+}
+
+window.onload = initModelParts;  // 頁面加載時初始化所有模型
+</script>
+<p><span></span></p>
 <p>利用 NX2312 繪製 <a href="https://mde.tw/cad2024/content/BonW.html">Balance on Wheels</a> 組立件的操作過程與說明影片如下:</p>
 <p style="padding-left: 30px;">影片標題: 國立虎尾科技大學機械設計工程系電腦輔助設計與實習- 作業二之二</p>
 <p style="padding-left: 30px;">所完成的零件檔案下載</p>
 <p>HW2 執行心得:</p>
 <p style="padding-left: 30px;">......</p>
 <p>HW2 自評分數:</p>
-<p style="padding-left: 30px;">完成上述流程後, 請將 HW2 自評分數輸入 cad2024 自評表單中.</p>
-<h2>HW2_Exam</h2>
-<p>與 HW2 內容相近的組立件題目, 隨堂進行考試.</p>
-<p>零件與組立件考試題目以 Solvespace 繪圖操作過程影片如下:</p>
-<p style="padding-left: 30px;">請將操作影片嵌入 ......</p>
-<p style="padding-left: 30px;">所完成的零件與組立件檔案下載</p>
-<p>零件與組立件考試題目以 NX 繪圖操作過程影片如下:</p>
-<p style="padding-left: 30px;">請將操作影片嵌入 ......</p>
-<p style="padding-left: 30px;">所完成的零件與組立件檔案下載</p>
-<h1>HW3</h1>
+<p style="padding-left: 30px;">完成上述流程後, 請將 HW2 自評分數輸入 cad2024 自評表單中.</p><h1>HW3</h1>
 <p>Homework 3 (20%):</p>
 <p style="padding-left: 30px;">建立 <a href="https://mde.tw/cad2024/content/BonW.html">Balance on Wheels</a> 控制系統設計模擬場景</p>
 <p style="padding-left: 30px;"><a href="https://github.com/mdecycu/Balance_On_Wheels">https://github.com/mdecycu/Balance_On_Wheels</a></p>
